Adicionado busca da tabela por data